coloco los script para conectar io y carpeta public

--- a/desafio-4/src/views/realTime.hbs
+++ b/desafio-4/src/views/realTime.hbs
@@ -27,3 +27,4 @@
 
 //configuro websocket del lado del cliente
 <script src="socket.io/socket.io.js"></script>
+<script src="js/realTime.js"></script>
