conecto el server de socket

--- a/desafio-4/src/views/realTime.hbs
+++ b/desafio-4/src/views/realTime.hbs
@@ -24,7 +24,6 @@
   {{/each}}
 </ul>
 
-
-//configuro websocket del lado del cliente
+{{!-- configuro websocket del lado del cliente --}}
 <script src="socket.io/socket.io.js"></script>
 <script src="js/realTime.js"></script>
