--- a/desafio-4/src/views/realTime.hbs
+++ b/desafio-4/src/views/realTime.hbs
@@ -1,28 +1,27 @@
 <h1>Productos en Tiempo Real</h1>
+
+<h2>Formulario para cargar productos</h2>
 <form id="productForm">
-  <input type="text" id="productName" placeholder="Nombre del producto" required>
+  <input type="text" name="title" placeholder="Nombre del producto" required>
   <br>
-  <input type="text" id="descrProduct" placeholder="Descripción del producto">
+  <input type="text" name="description" placeholder="Descripción del producto">
   <br>
-  <input type="text" id="priceProduct" placeholder="Prcio">
+  <input type="text" name="price" placeholder="Precio">
   <br>
-  <input type="text" id="codeProduct" placeholder="Código">
+  <input type="text" name="code" placeholder="Código">
  <br>
-  <input type="text" id="thumbnailProduct" placeholder="imagen del producto">
+  <input type="text" name="thumbnail" placeholder="Imagen">
   <br>
-  <input type="text" id="stockProduct" placeholder="Stock">
+  <input type="text" name="stock" placeholder="Stock">
   <br>
-  <input type="text" id="categoryProduct" placeholder="Categoría del producto">
+  <input type="text" name="category" placeholder="Categoría del producto">
   <br>
   <button type="submit">Agregar Producto</button>
 </form>
 
-<ul id="productList">
-  {{#each products}}
-    <li>{{this.title}}</li>
-    <!-- Otros detalles del producto -->
-  {{/each}}
-</ul>
+<h2>Listado de Productos</h2>
+{{!-- con el id capturo el producto en el archivo js/realTime.js --}}
+<ul id="productList"></ul>
 
 {{!-- configuro websocket del lado del cliente --}}
 <script src="socket.io/socket.io.js"></script>
