--- a/desafio-4/src/views/home.hbs
+++ b/desafio-4/src/views/home.hbs
@@ -1,14 +1,14 @@
-<h1>Listado de Productos</h1>
+<h1 class="titleList">Listado de Productos</h1>
 
 {{#each products}}
 
-    <ul>
+    <ul class="list">
         <li>Nombre Producto: {{this.title}} <br> Precio: {{this.price}} <br>
             Descripcion: {{this.description}} <br>
             Imagen: {{this.thumbnail}} <br>
             Code: {{this.code}} <br> Stock: {{this.stock}} <br>
             Categoria: {{this.category}}
-        </li> <br><br>
+        </li>
     </ul>
 
 {{/each}}
