--- a/desafio-4/src/views/layouts/main.hbs
+++ b/desafio-4/src/views/layouts/main.hbs
@@ -6,11 +6,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Desafio 4</title>
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/realTime.css">
+    <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/realTimeProducts">Productos temporales</a>
+    <nav class="nav">
+        <a class="nav__link" href="/">Home</a>
+        <a class="nav__link" href="/realTimeProducts">Productos temporales</a>
     </nav>
     <h1>Proyecto Desafio 4</h1>
     {{{body}}}
