--- a/desafio-5-complemantario/src/views/layouts/main.hbs
+++ b/desafio-5-complemantario/src/views/layouts/main.hbs
@@ -13,6 +13,7 @@
 <body>
     <nav class="nav">
         <a class="nav__link" href="/">Home</a>
+        <a class="nav__link" href="/message">Chat</a>
         <a class="nav__link" href="/realTimeProducts">Productos temporales</a>
     </nav>
     <h1>Proyecto Desafio 4</h1>
