copia segunda pre entrega

--- a/desafio-6/src/public/css/index.css
+++ b/desafio-6/src/public/css/index.css
@@ -1,7 +1,9 @@
 .nav{
     margin: 0 auto;
-    width: 50%;
+    width: 90%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+.title{
     text-align: center;
 }
