--- a/desafio-6/src/views/layouts/main.hbs
+++ b/desafio-6/src/views/layouts/main.hbs
@@ -9,14 +9,16 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/realTime.css">
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/paginate.css">
 </head>
 <body>
     <nav class="nav">
         <a class="nav__link" href="/">Home</a>
         <a class="nav__link" href="/message">Chat</a>
-        <a class="nav__link" href="/realTimeProducts">Productos temporales</a>
+        <a class="nav__link" href="/realTimeProducts">Productos tiempo Real</a>
+        <a class="nav__link" href="/products">Paginacion</a>
     </nav>
-    <h1>Proyecto Desafio 4</h1>
+    <h1 class="title">Proyecto Desafio 4</h1>
     {{{body}}}
 </body>
 </html>
