--- a/desafio-6/src/views/realTime.hbs
+++ b/desafio-6/src/views/realTime.hbs
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-  <div>
+  <div >
     <h2>Formulario para cargar productos</h2>
     {{!-- con el id capturo el producto en el archivo js/realTime.js --}}
     <form id="productForm">
@@ -25,7 +25,7 @@
     </form>
   </div>
 
-  <div >
+  <div class="containerProducts">
     <h2 class="subtitle">Listado de Productos</h2>
 
     {{!-- con el id capturo el producto en el archivo js/realTime.js --}}
