linkeo registro y perfil

--- a/desafio-6/src/views/layouts/main.hbs
+++ b/desafio-6/src/views/layouts/main.hbs
@@ -13,10 +13,12 @@
 </head>
 <body>
     <nav class="nav">
-        {{!-- <a class="nav__link" href="/">Home</a>
+        <a class="nav__link" href="/">Home</a>
         <a class="nav__link" href="/message">Chat</a>
-        <a class="nav__link" href="/realTimeProducts">Productos tiempo Real</a>
-        <a class="nav__link" href="/products">Paginacion</a> --}}
+        <a class="nav__link" href="/realTimeProducts">Real Time</a>
+        <a class="nav__link" href="/products">Paginacion</a>
+        <a class="nav__link" href="/profile">Perfil</a>
+        <a class="nav__link" href="/register">Registro</a>
     </nav>
     <h1 class="title">Proyecto Desafio 4</h1>
     {{{body}}}
