--- a/desafio-6/src/views/login.hbs
+++ b/desafio-6/src/views/login.hbs
@@ -1,2 +1,25 @@
 <h1>Login de Usuarios / administrador</h1>
 
+<p style="color: green">{{message}}</p>
+
+<p style="color: red">{{errorLogin}} {{errorRegister}}</p>
+
+<p style="color: red">{{errorSession}}</p>
+
+<form action="api/ssesions/login" method="post">
+    
+    <label for="email">Correo electronico:</label>
+    <br>
+    <input type="email" name="email" placeholder="Email">
+    <br><br>
+
+    <label for="password">Contraseña:</label>
+    <br>
+    <input type="password" name="password" placeholder="Contraseña"><br><br>
+
+
+    <button>Iniciar Sesión</button>
+
+    <p>No tienes una cuenta? Registrate <a href="/register">aqui</a></p>
+
+</form>
