--- a/desafio-6/src/views/login.hbs
+++ b/desafio-6/src/views/login.hbs
@@ -2,7 +2,7 @@
 
 <p style="color: green">{{message}}</p>
 
-<p style="color: red">{{errorLogin}} {{errorRegister}}</p>
+<p style="color: red">{{errorLogin}}</p>
 
 <p style="color: red">{{errorSession}}</p>
 
