--- a/desafio-6/src/views/register.hbs
+++ b/desafio-6/src/views/register.hbs
@@ -1,6 +1,6 @@
 <h1>Registro de Usuarios</h1>
 
-<p style="color: red;">{{errorRegister}}</p>
+<p style="color: red;">{{error}}</p>
 
 <form action="api/sessions/register" method="post">
 
@@ -23,4 +23,4 @@
 
 </form>
 
-<p>Ya tienes una cuenta? <a href="api/sessions/login">Iniciar Sesión</a></p>
+<p>Ya tienes una cuenta? <a href="/login">Iniciar Sesión</a></p>
