--- a/desafio-6/src/views/register.hbs
+++ b/desafio-6/src/views/register.hbs
@@ -4,20 +4,20 @@
 
 <form action="api/sessions/register" method="post">
 
-    <label for="first_name">Nombre:</label>
-    <input type="text" name="first_name">
+    <label for="first_name">Nombre:</label><br>
+    <input type="text" name="first_name"><br><br>
 
-    <label for="last_name">Apellido:</label> 
-    <input type="text" name="last_name">
+    <label for="last_name">Apellido:</label><br>
+    <input type="text" name="last_name"><br><br>
 
-    <label for="age">Edad:</label>
-    <input type="number" name="age">
+    <label for="age">Edad:</label><br>
+    <input type="number" name="age"><br><br>
 
-    <label for="email">Email:</label>
-    <input type="email" name="email">
+    <label for="email">Email:</label><br>
+    <input type="email" name="email"><br><br>
 
-    <label for="password">Contraseña:</label>
-    <input type="password" name="password">
+    <label for="password">Contraseña:</label><br>
+    <input type="password" name="password"><br><br>
 
     <button>Registrarse</button>
 
