--- a/desafio-6/src/views/home.hbs
+++ b/desafio-6/src/views/home.hbs
@@ -1,5 +1,8 @@
 <h1 class="titleList">Listado de Productos</h1>
 
+<h2>Hola, <span style="color: blueviolet">{{userFirst_name}} {{userLast_name}}</span></h2>
+<p>Sos <span style="color: rgb(228, 127, 12)" >{{userRol}}</span>, podes navegar en ella</p>
+
 {{#each products}}
 
     <ul class="list">
