--- a/desafio-6/src/views/login.hbs
+++ b/desafio-6/src/views/login.hbs
@@ -2,9 +2,9 @@
 
 <p style="color: green">{{message}}</p>
 
-<p style="color: red">{{errorLogin}}</p>
+<p style="color: red">{{error}}</p>
 
-<p style="color: red">{{errorSession}}</p>
+
 
 <form action="api/ssesions/login" method="post">
     
