--- a/desafio-6/src/views/login.hbs
+++ b/desafio-6/src/views/login.hbs
@@ -6,7 +6,7 @@
 
 
 
-<form action="api/ssesions/login" method="post">
+<form action="api/sessions/login" method="post">
     
     <label for="email">Correo electronico:</label>
     <br>
