muestro el usuario logueado en la home y el rol, tambien los datos en perfil

--- a/desafio-6/src/views/profile.hbs
+++ b/desafio-6/src/views/profile.hbs
@@ -1,9 +1,9 @@
 <h1>Perfil del Usuario</h1>
 
-<P>Nombre: {{userFirst_name}}</P>
-<p>Apellido: {{userLast_name}}</p>
+<P>Nombre: {{userFirst_Name}}</P>
+<p>Apellido: {{userLast_Name}}</p>
 <p>Edad: {{userAge}}</p>
 <p>Email: {{userEmail}}</p>
-<p>Rol: {{userRol}}</p>
+<p>Rol: {{userRole}}</p>
 
-<button>Cerrar Sesión</button>
+<a href="api/sessions/logout">Cerrar Sesion</a>
