--- a/desafio-6/src/views/register.hbs
+++ b/desafio-6/src/views/register.hbs
@@ -2,7 +2,7 @@
 
 <p style="color: red;">{{error}}</p>
 
-<form action="api/sessions/register" method="post">
+<form action="/api/sessions/register" method="post">
 
     <label for="first_name">Nombre:</label><br>
     <input type="text" name="first_name"><br><br>
