agrego mensaje a las views

--- a/desafio-6/src/views/chat.hbs
+++ b/desafio-6/src/views/chat.hbs
@@ -1,5 +1,5 @@
 <h1>Pagina de Chat</h1>
-
+<p style="color: red">{{error}}</p>
 {{!-- para mostrar quein se conecta --}}
 <p>Bienvenido <span id="userName"></span></p>
 
