--- a/desafio-6/src/views/productsPaginate.hbs
+++ b/desafio-6/src/views/productsPaginate.hbs
@@ -1,5 +1,7 @@
 <h1>Productos Con Paginacion</h1>
 
+<p style="color: red">{{error}}</p>
+
 <a class="btnCart" href="/cart/6525e395443bd76c765dd0ee">Ver carrito</a>
 
 <div class="containerProd"></div>
