agrego validacion para usuario admin

--- a/desafio-6/src/views/profile.hbs
+++ b/desafio-6/src/views/profile.hbs
@@ -1,5 +1,5 @@
 <h1>Perfil del Usuario</h1>
-
+<p style="color: red">{{error}}</p>
 <P>Nombre: {{userFirst_Name}}</P>
 <p>Apellido: {{userLast_Name}}</p>
 <p>Edad: {{userAge}}</p>
