agrego boton para registro con github

--- a/desafio-7/src/views/register.hbs
+++ b/desafio-7/src/views/register.hbs
@@ -23,4 +23,9 @@
 
 </form>
 
+<a href="/api/sessions/register-github">
+
+    <button>Registrarse con GitHub</button>
+</a>
+
 <p>Ya tienes una cuenta? <a href="/login">Iniciar Sesión</a></p>
