agrego validaciones para las vistas

--- a/desafio-7/src/views/home.hbs
+++ b/desafio-7/src/views/home.hbs
@@ -1,9 +1,17 @@
 <h1 class="titleList">Listado de Productos</h1>
 <div>
 
-    <h2>Hola, <span style="color: blueviolet">{{userFirst_Name}} {{userLast_Name}}</span></h2>
-            
-    <p>Sos <span style="color: rgb(228, 127, 12)" >{{userRole}}</span>de la pagina</p>
+    {{#if userAdmin}}
+        <h2>Hola, <span style="color: rgb(95, 5, 65)"> {{userFirst_name}}</span></h2>
+        <p>Sos <span style="color: rgb(12, 131, 228)" >{{userRole}}</span> de la pagina</p>
+        {{else}}
+        <h2>Hola, <span style="color: blueviolet">{{userFirst_name}} {{userLast_name}}</span></h2>
+        <p>Sos <span style="color: rgb(228, 127, 12)" >{{userRole}}</span>, Ya poder navegar por nuestro sitio!!</p>
+        
+    {{/if}}
+
+        
+    
 
 </div>
 
