--- a/desafio-7/src/views/profile.hbs
+++ b/desafio-7/src/views/profile.hbs
@@ -2,31 +2,25 @@
 <p style="color: red">{{error}}</p>
 <p style="color: green">{{message}}</p>
 
-{{!-- <div>
-
-    <P>Nombre: {{userFirst_Name}}</P>
-    <p>Apellido: {{userLast_Name}}</p>
-    <p>Edad: {{userAge}}</p>
-    <p>Email: {{userEmail}}</p>
-    <p>Rol: {{userRole}}</p>
-
-</div> --}}
 <div>
-   {{#if userAge}}
-        
-        {{#if userRole}}
-            <p>Nombre: {{userFirst_name}}</p>
-            <p>Email: {{userEmail}} </p>
-            <p>Rol: {{userRole}}</p>
-        {{else}}
-            <P>Nombre: {{userFirst_name}}</P>
-            <p>Usuario Github: {{userGithub}}</p>
-            <p>Email: {{userEmail}}</p>
-            <p>Rol: {{userRole}}</p>
-       
-        {{/if}}
-    {{else}}
+    {{#if userAdmin}}
+        {{!-- usuario admin --}}
+        <P>Nombre: {{userFirst_name}}</P>
+        <p>Email: {{userEmail}}</p>
+        <p>Rol: {{userRole}}</p>
+    {{/if}}
 
+    {{#if userGithub}}
+        {{!-- usuario github --}}
+        <P>Nombre: {{userFirst_name}}</P>
+        <p>Usuario: {{userUsername}}</p>
+        <p>Email: {{userEmail}}</p>
+        <p>Rol: {{userRole}}</p>
+            
+    {{/if}}
+
+    {{#if userUser}}
+        {{!-- usuario local --}}
         <P>Nombre: {{userFirst_name}}</P>
         <p>Apellido: {{userLast_name}}</p>
         <p>Edad: {{userAge}}</p>
@@ -35,5 +29,6 @@
     {{/if}}
 
 </div>
+
 
 <a href="api/sessions/logout">Cerrar Sesion</a>
