apliaco estrategia jwt, cookie-parser, passport-jwt

--- a/desafio-8-complemantario/src/views/layouts/main.hbs
+++ b/desafio-8-complemantario/src/views/layouts/main.hbs
@@ -17,10 +17,10 @@
         <a class="nav__link" href="/message">Chat</a>
         <a class="nav__link" href="/realTimeProducts">Real Time</a>
         <a class="nav__link" href="/products">Paginacion</a>
-        <a class="nav__link" href="/profile">Perfil</a>
+        <a class="nav__link" href="/profile" >Perfil</a>
         <a class="nav__link" href="/register">Registro</a>
     </nav>
-    <h1 class="title">Proyecto Desafio 4</h1>
+    <h1 class="title">Proyecto Desafios</h1>
     {{{body}}}
 </body>
 </html>
