--- a/desafio-8-complemantario/src/views/layouts/main.hbs
+++ b/desafio-8-complemantario/src/views/layouts/main.hbs
@@ -6,12 +6,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Desafio 4</title>
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/realTime.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/{{style}}">
+    {{!-- <link rel="stylesheet" href="/css/realTime.css">
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/paginate.css">
+    <link rel="stylesheet" href="/css/login.css"> --}}
+
 </head>
-<body>
+<body class="main">
     <nav class="nav">
         <a class="nav__link" href="/">Home</a>
         <a class="nav__link" href="/message">Chat</a>
