--- a/desafio-8-complemantario/src/views/login.hbs
+++ b/desafio-8-complemantario/src/views/login.hbs
@@ -1,24 +1,26 @@
-<h1>Login de Usuarios / administrador</h1>
+<section class="sectionLogin">
+    <h1 class="title">Login</h1>
 
-<p style="color: green">{{message}}</p>
+<span class="message">{{message}}</span>
 
-<p style="color: red">{{error}}</p>
+<span class="error">{{error}}</span>
 
 
-<form action="/api/sessions/login" method="post" >
+<form class="formLogin" action="/api/sessions/login" method="post" >
     
-    <label for="email">Correo electronico:</label>
+    <label class="label" for="email">Correo electronico:</label>
     <br>
     <input type="email" name="email" placeholder="Email">
     <br><br>
 
-    <label for="password">Contraseña:</label>
+    <label class="label" for="password">Contraseña:</label>
     <br>
     <input type="password" name="password" placeholder="Contraseña"><br><br>
 
 
-    <button>Iniciar Sesión</button>
+    <button class="btnLogin">Iniciar Sesión</button>
 
-    <p>No tienes una cuenta? Registrate <a href="/register">aqui</a></p>
+    <p>No tienes una cuenta? Registrate <a class="aqui" href="/register">aqui</a></p>
 
 </form>
+</section>
