--- a/desafio-8-complemantario/src/views/layouts/main.hbs
+++ b/desafio-8-complemantario/src/views/layouts/main.hbs
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="/css/{{style}}">
     {{!-- <link rel="stylesheet" href="/css/realTime.css">
     <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/paginate.css">
-    <link rel="stylesheet" href="/css/login.css"> --}}
+    <link rel="stylesheet" href="/css/paginate.css"> --}}
+    
 
 </head>
 <body class="main">
