--- a/desafio-8-complemantario/src/public/css/main.css
+++ b/desafio-8-complemantario/src/public/css/main.css
@@ -8,6 +8,11 @@
     display: flex;
     flex-direction: column;
 }
+.nav__link{
+    text-decoration: none;
+    font-size: 2rem;
+    color: rgb(179, 88, 88);
+}
 .title{
     text-align: center;
 }
