--- a/desafio-8-complemantario/src/public/css/realTime.css
+++ b/desafio-8-complemantario/src/public/css/realTime.css
@@ -1,22 +1,14 @@
-.title{
+/* .title{
     text-align: center;
 }
 
-.container{
-    
 
-}
 
 .subtitle{
     text-align: center;
-}
+} */
 .productList{
     display: flex;
     flex-wrap: wrap;
     gap: 100px;
-}
-.nav__link{
-    text-decoration: none;
-    font-size: 2rem;
-    color: rgb(179, 88, 88);
 }
