--- a/desafio-8-complemantario/src/views/home.hbs
+++ b/desafio-8-complemantario/src/views/home.hbs
@@ -1,30 +1,30 @@
-<h1 class="titleList">Listado de Productos</h1>
-<div>
+<section class="sectionHome">
+    <h1 class="titleList">Listado de Productos</h1>
+    <div >
 
-    {{#if userAdmin}}
-        <h2>Hola, <span style="color: rgb(95, 5, 65)"> {{userFirst_name}}</span></h2>
-        <p>Sos <span style="color: rgb(12, 131, 228)" >{{userRole}}</span> de la pagina</p>
-        {{else}}
-        <h2>Hola, <span style="color: blueviolet">{{userFirst_name}} {{userLast_name}}</span></h2>
-        <p>Sos <span style="color: rgb(228, 127, 12)" >{{userRole}}</span>, Ya poder navegar por nuestro sitio!!</p>
-        
-    {{/if}}
+        {{#if userAdmin}}
+            <h2>Hola, <span class="userAdmin"> {{userFirst_name}}</span></h2>
+            <p>Sos <span class="rolAdmin" >{{userRole}}</span> de la pagina</p>
+            {{else}}
+            <h2>Hola, <span class="user">{{userFirst_name}} {{userLast_name}}</span></h2>
+            <p>Sos <span class="rolUser" >{{userRole}}</span>, Ya poder navegar por nuestro sitio!!</p>
+            
+        {{/if}}
 
-        
-    
-
-</div>
+    </div>
 
 
-{{#each products}}
-
-    <ul class="list">
-        <li>Nombre Producto: {{this.title}} <br> Precio: {{this.price}} <br>
-            Descripcion: {{this.description}} <br>
-            Imagen: {{this.thumbnail}} <br>
-            Code: {{this.code}} <br> Stock: {{this.stock}} <br>
-            Categoria: {{this.category}}
-        </li>
-    </ul>
-
-{{/each}}
+    <div class="container">
+        {{#each products}}
+            <div class="list">
+                <p>Imagen: {{this.thumbnail}}</p>
+                <p>Nombre Producto: {{this.title}}</p>
+                <p>Precio: {{this.price}}</p>
+                <p>Descripcion: {{this.description}}</p>
+                <p>Code: {{this.code}}</p>
+                <p>Stock: {{this.stock}}</p>
+                <p>Categoria: {{this.category}}</p>
+            </div>
+        {{/each}}
+    </div>
+</section>
