--- a/desafio-8-complemantario/src/views/productsPaginate.hbs
+++ b/desafio-8-complemantario/src/views/productsPaginate.hbs
@@ -1,36 +1,38 @@
-<h1>Productos Con Paginacion</h1>
+<section class="sectionProducts">
+    <h1>Productos Con Paginacion</h1>
 
-<p style="color: red">{{error}}</p>
+    <span class="error">{{error}}</span>
 
-<a class="btnCart" href="/cart/6525e395443bd76c765dd0ee">Ver carrito</a>
+    <a class="btnCart" href="/cart/6525e395443bd76c765dd0ee">Ver carrito</a>
 
-<div class="containerProd"></div>
-    {{#each payload.docs}}
-        
-            <div >
-                Nombre del Producto: {{this.title}} - 
-                Descripcion: {{this.description}} - 
-                Precio: {{this.price}} - 
-                Imagen: {{this.thumbnail}} - 
-                Code: {{this.code}} - 
-                Stock: {{this.stock}} - 
-                Categoria: {{this.category}} -
-                <button onclick="addToCart(`{{this._id}}`)">agregar al carrito</button>
+    <div class="containerProducts">
+        {{#each payload.docs}}
+            
+            <div class="listPaginate">
+                <p>Imagen: {{this.thumbnail}}</p>
+                <p>Nombre Producto: {{this.title}}</p>
+                <p>Precio: {{this.price}}</p>
+                <p>Descripcion: {{this.description}}</p>
+                <p>Code: {{this.code}}</p>
+                <p>Stock: {{this.stock}}</p>
+                <p>Categoria: {{this.category}}</p>
+                <button class="btnProducts" onclick="addToCart(`{{this._id}}`)">agregar al carrito</button>
             </div>
 
-    {{/each}}
-</div>
+        {{/each}}
+    </div>
 
-<div class="containerBtn">
-    {{#if prevLink}}
+    <div class="containerBtn">
+        {{#if prevLink}}
 
-        <a class="btnLink" href="{{prevLink}}">Anterior</a>
-    {{/if}}
+            <a class="btnLink" href="{{prevLink}}">Anterior</a>
+        {{/if}}
 
-    {{#if nextLink}}
-        <a class="btnLink" href="{{nextLink}}">Siguiente</a>
-    {{/if}}
-</div>
+        {{#if nextLink}}
+            <a class="btnLink" href="{{nextLink}}">Siguiente</a>
+        {{/if}}
+    </div>
+</section>
 
 
 
