--- a/desafio-12-complementario/src/views/login.hbs
+++ b/desafio-12-complementario/src/views/login.hbs
@@ -23,4 +23,7 @@
     <p>No tienes una cuenta? Registrate <a class="aqui" href="/register">aqui</a></p>
 
 </form>
+
+<hr>
+<a href="/forgot-password">Olvidaste tu Contraseña</a>
 </section>
