error al registrar usuario

--- a/desafio-12-complementario/src/views/resetPassview.hbs
+++ b/desafio-12-complementario/src/views/resetPassview.hbs
@@ -1,8 +1,10 @@
-<h1>Res</h1>
+<h1>Restablece tu Contraseña</h1>
+<br>
 <p style="color: red;">{{error}}</p>
-<p>ingrs</p>
+<br>
+<p>Ingresa tu nueva contraseña</p>
 
 <form action="/api/sessions/reset-password?token={{token}}" method="post">
     <input type="password" placeholder="Nueva Contraseña" name="newPassword">
-    <button>Resetear Contraseña</button>
+    <button>Restablecer Contraseña</button>
 </form>
